# ctfd-challenge-uploader

./: LICENSE  README.md  pyproject.toml  readme.md  requirements.txt
challenges/: __main__.py  challenges.py  ctfd_client.py
src/ctfd_challenge_uploader/: __main__.py  challenges.py  ctfd_client.py
